--- a/src/css/layouts/_case-studies.scss
+++ b/src/css/layouts/_case-studies.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   border-radius: 12px;
   padding: 33px 40px;
-  margin-bottom: 30px;
+  //margin-bottom: 30px;
   box-shadow: rgba(0, 0, 0, 0.29) 0 20px 20px;
   @include brand-gradient-45;
 
